--- a/dz4/wp-config-sample.php.j2
+++ b/dz4/wp-config-sample.php.j2
@@ -29,7 +29,7 @@ define( 'DB_USER', '{{WORDPRESS_DB_USER}}' );
 define( 'DB_PASSWORD', '{{WORDPRESS_DB_PASSWORD}}' );
 
 /** Database hostname */
-define( 'DB_HOST', '{{WORDPRESS_DB_HOST}}' );
+define( 'DB_HOST', '{{WORDPRESS_DB_HOST}}:{{WORDPRESS_DB_PORT}}' );
 
 /** Database charset to use in creating database tables. */
 define( 'DB_CHARSET', 'utf8' );
